adding note about git for developpers

--- a/bower.json
+++ b/bower.json
@@ -1,1 +1,1 @@
-changing colour of UI 
+Learning Git and Linux helps me manage projects efficiently and collaborate with others. Using tools like `git init`, `git clone`, and creating branches allows me to track changes and improve my workflow. With Linux, I gain more control over my development environment. These skills are essential for modern developers. 
